# gbeampro

./: .gitignore  CLAUDE.md  LICENSE  README.md  __init__.py  beam_base.py  beambase.py  gbeampro_example.ipynb  pyproject.toml
.claude/skills/: api-doc.md  nb-exec-push.md  pypi-release.md
docs/: analysis_plot_api.md  beam_api.md  elements_api.md  optimize_api.md  system_api.md  technical_notes.md
examples/: astigmatic_beam_shaping.ipynb  beam_focusing_into_crystal.ipynb  focusing_to_crystal.py  minimum_lens_system.py  telescope_collimation.py  test_all_elements.ipynb  test_plot_system.ipynb
gbeampro/: README.md  __init__.py  analysis.py  beam.py  beambase.py  elements.py  helper.py  optimize.py  plot.py  system.py
gbeampro/examples/: astigmatic_beam_shaping.ipynb  beam_focusing_into_crystal.ipynb  minimum_lens_system.ipynb  test_all_elements.ipynb  test_plot_system.ipynb
