[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "gbeampro/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["gbeampro"]

[project]
name = "gbeampro"
dynamic = ["version"]
description = "Python package for designing gaussian laser beam propagation and transformation."
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    { name = "Akihiko Shimura", email = "akhksh@gmail.com" },
]
requires-python = ">=3.9"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy"
]

[project.optional-dependencies]
optimize = ["scipy"]

[project.urls]
Homepage = "https://github.com/akihiko-shimura/gbeampro"
